# open-rollcall

./: .gitignore  README.md  docker-compose.example.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  camera_client.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_schedule.py  004_face_attendance_person_scope.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: attendance.py  auth.py  employees.py  face.py  persons.py  schedule.py  students.py  users.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: __init__.py  academic_program.py  attendance.py  attendance_log.py  base.py  department.py  employee.py  face_encoding.py  person.py  position.py  schedule.py  student.py  user.py
backend/app/repositories/: attendance.py  base.py  employee.py  face_encoding.py  person.py  schedule.py  student.py  user.py
backend/app/schemas/: attendance.py  auth.py  employee.py  face.py  person.py  schedule.py  student.py
backend/app/services/: attendance_service.py  auth_service.py  employee_service.py  face_service.py  person_service.py  schedule_service.py  student_service.py
backend/backend/alembic/versions/: 003_add_student.py
backend/docs/: reconocimiento_facial.md
backend/tests/: conftest.py  test_face.py  test_persons.py  test_students.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts
(+200 files in other folders)
