[project]
name = "rollcall-backend"
version = "0.1.0"
description = "RollCall — facial recognition attendance system backend"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",          # async PostgreSQL driver
    "alembic>=1.13.0",
    "pgvector>=0.3.0",           # pgvector SQLAlchemy integration

    # Settings
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Auth / security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Face recognition
    "deepface>=0.0.93",
    "tensorflow>=2.21.0",
    "tf-keras>=2.21.0",
    "Pillow>=10.0.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0",

    # HTTP form data
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",              # async test client para FastAPI
    "factory-boy>=3.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]  # FastAPI usa Depends() en default args

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
